2010-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py, menu.py: Updated translations.

2010-04-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py (ActorGeoIcon): Normalize Google Map URI.

2010-04-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.glade: Added translator credits.
	* rss.py (RSSPhotoList): Remove redundant tags from entry title.

2010-04-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* en_GB.po: Added new translation.  Thanks Robert Readman!

2010-04-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot/__init__.py, rating.py, sqldb.py: Divided fspot.py.
	* fspot.py: Added support for random photos with support for rate
	  changing.

2010-04-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Added support for recursive tag search.

2010-04-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Fixed total photo numbers with rating filter.
	  Code refactoring.

2010-04-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Fixed a ambiguous column name bug (id -> P.id).
	* actors.py (Texture): Fixed a bug of texture show/hide behaviour.

2010-04-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/api.py: Improved code for certification.
	* flickr/authdialog.py (PluginFlickrDialog): Added a black magic
	  for avoiding unintended GC for sub instances.

2010-04-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py, actors.py, plugins/base.py, plugins/flickr/auth.py:
	  gnome-open -> gtk.show_uri.
	* share/*.ui, menu.py, preferences.py: Divided gphotoframe.ui.
	  Completed transition from libGlade to GtkBuilder.
	* gphotoframe.glade: Removed from the repository.

2010-04-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py, actors.py, animation.py: Improved icon
	  animation on fullscreen.

2010-04-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimageclutter.py: Added support fade-in/out animation in
	  fullscreen mode.

2010-04-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
